--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.18.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.codahale</groupId>
+            <artifactId>shamir</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
         <dependency>
             <groupId>commons-codec</groupId>
